--- a/app/src/main/res/layout/activity_leave_info.xml
+++ b/app/src/main/res/layout/activity_leave_info.xml
@@ -34,6 +34,7 @@
                 android:orientation="horizontal">
 
                 <TextView
+                    android:id="@+id/name_title_txt"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Employee Name :"
@@ -55,6 +56,7 @@
                 android:orientation="horizontal">
 
                 <TextView
+                    android:id="@+id/id_title_text"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Employee Id :"
@@ -76,6 +78,7 @@
                 android:orientation="horizontal">
 
                 <TextView
+                    android:id="@+id/branch_title_txt"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:gravity="center"
@@ -99,6 +102,7 @@
                 android:orientation="horizontal">
 
                 <TextView
+                    android:id="@+id/dept_title_txt"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:gravity="center"
@@ -122,6 +126,7 @@
                 android:orientation="horizontal">
 
                 <TextView
+                    android:id="@+id/desig_title_txt"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:gravity="center"
@@ -145,6 +150,7 @@
                 android:orientation="horizontal">
 
                 <TextView
+                    android:id="@+id/contact_title_txt"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:gravity="center"
@@ -163,6 +169,7 @@
         </LinearLayout>
 
         <LinearLayout
+            android:id="@+id/image_layout"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight=".4"
