--- a/app/src/main/res/layout/activity_operation.xml
+++ b/app/src/main/res/layout/activity_operation.xml
@@ -1,15 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/android_coordinator_layoutId"
+    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:background="@color/colorPrimaryDark">
 
-    <android.support.v7.widget.RecyclerView
+    <GridView
+        android:id="@+id/gridhrms"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:scrollbars="vertical"
-        android:id="@+id/operation_recyclerViewId">
-
-    </android.support.v7.widget.RecyclerView>
+        android:gravity="center"
+        android:numColumns="3"
+        android:divider="@color/colorPrimaryDark"
+        android:dividerHeight="1dip" />
 
 </LinearLayout>
