--- a/app/src/main/res/layout/activity_reset_password.xml
+++ b/app/src/main/res/layout/activity_reset_password.xml
@@ -15,7 +15,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="160dp"
         android:text="@string/reset_string"
-        android:textColor="@drawable/bluedesignbg"
+        android:textColor="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -27,9 +27,11 @@
         android:layout_marginEnd="24dp"
         android:layout_marginStart="24dp"
         android:layout_marginTop="5dp"
+        android:hint="@string/email_id"
+        android:textSize="16dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView" />
+        app:layout_constraintTop_toBottomOf="@+id/textView"/>
 
     <EditText
         android:id="@+id/editTextResetID"
@@ -38,6 +40,8 @@
         android:layout_marginEnd="24dp"
         android:layout_marginStart="24dp"
         android:layout_marginTop="5dp"
+        android:hint="@string/employee_id"
+        android:textSize="16dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editTextResetEmail" />
@@ -49,7 +53,7 @@
         android:layout_marginStart="4dp"
         android:layout_marginTop="18dp"
         android:text="@string/back"
-        android:textColor="@drawable/bluedesignbg"
+        android:textColor="@color/black"
         app:layout_constraintStart_toStartOf="@+id/editTextResetID"
         app:layout_constraintTop_toBottomOf="@+id/editTextResetID" />
 
@@ -60,7 +64,7 @@
         android:layout_marginEnd="4dp"
         android:layout_marginTop="18dp"
         android:text="@string/submit"
-        android:textColor="@drawable/bluedesignbg"
+        android:textColor="@color/black"
         app:layout_constraintEnd_toEndOf="@+id/editTextResetID"
         app:layout_constraintTop_toBottomOf="@+id/editTextResetID" />
 
